<resources>
    <string name="app_name">Save Pass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_name">Service name</string>
    <string name="service_password">Service password</string>
    <string name="select_service_type">Select service type : -</string>
    <string name="internet_service">Internet Service</string>
    <string name="application_service">Application Service</string>
    <string name="fingerprint_unlock">Use FingerPrint to unlock</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>
    <string name="text_blank">*text blank</string>
    <string name="set_new_password">Set New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password">Old Password</string>
    <string name="password_fragment_info">YOUR PASSWORD MUST CONTAIN ALPHABETS, NUMBERS AND SYMBOLS.\n\nTHIS PASSWORD WILL BE USED TO RETRIEVE ANY PASSWORD WHEN THE FINGERPRINT IS UNAVAILABLE OR FOR THE ONES WHERE YOU HAVE OPTED OUT OF USING THE FINGERPRINT.\n\nTHIS PASSWORD CANNOT BE RETRIEVED IF FORGOTTEN.</string>
    <string name="click_to_add_password">Click on the \'+\' \nto add a new service password</string>
    <string name="add_new_password">Add new password</string>
</resources>