<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AddOrEditFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/service_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_app_margin"
            android:hint="@string/service_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/service_name_empty_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_blank"
            android:textColor="#ff0000"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@id/service_name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/service_name_edit_text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/service_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_app_margin"
            android:hint="@string/service_password"
            app:layout_constraintLeft_toLeftOf="@id/service_name_edit_text"
            app:layout_constraintRight_toRightOf="@id/service_name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/service_name_edit_text" />

        <TextView
            android:id="@+id/service_password_empty_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_blank"
            android:textColor="#ff0000"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@id/service_password_edit_text"
            app:layout_constraintTop_toBottomOf="@id/service_password_edit_text" />

        <View
            android:id="@+id/ruler_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ruler_thickness"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="@dimen/vertical_app_margin"
            android:background="#888888"
            app:layout_constraintTop_toBottomOf="@id/service_password_edit_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/select_service_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/select_service_type"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@id/service_name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/ruler_one" />

        <RadioGroup
            android:id="@+id/service_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@id/service_name_edit_text"
            app:layout_constraintRight_toRightOf="@id/service_name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/select_service_textview">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/internet_service_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/internet_service" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/application_service_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application_service" />
        </RadioGroup>

        <View
            android:id="@+id/ruler_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ruler_thickness"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="@dimen/vertical_app_margin"
            android:background="#888888"
            app:layout_constraintTop_toBottomOf="@id/service_radio_group" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/fingerprint_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_app_margin"
            android:checked="true"
            android:text="@string/fingerprint_unlock"
            app:layout_constraintLeft_toLeftOf="@id/service_name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/ruler_two" />

        <View
            android:id="@+id/ruler_three"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ruler_thickness"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="@dimen/vertical_app_margin"
            android:background="#888888"
            app:layout_constraintTop_toBottomOf="@id/fingerprint_check_box" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_app_margin"
            android:text="@string/cancel"
            app:layout_constraintLeft_toLeftOf="@id/service_name_edit_text"
            app:layout_constraintRight_toLeftOf="@id/save_button"
            app:layout_constraintTop_toBottomOf="@id/ruler_three" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_app_margin"
            android:text="@string/save"
            app:layout_constraintLeft_toRightOf="@id/cancel_button"
            app:layout_constraintRight_toRightOf="@id/service_name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/ruler_three" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>