<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="set_password_fragment"
            type="com.kenetic.savepass.fragments.SetPasswordFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragments.SetPasswordFragment">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/information_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/password_fragment_horizontal"
                android:text="@string/password_fragment_info"
                android:textColor="@color/text_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/set_new_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/password_fragment_horizontal"
                android:layout_marginTop="@dimen/password_fragment_vertical"
                android:hint="@string/set_new_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/information_text_view" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/set_new_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/password_fragment_horizontal"
                android:textColor="@color/warning_text_color"
                android:textSize="@dimen/warning_text_size"
                android:visibility="@{set_password_fragment.symbolsVisibility}"
                app:layout_constraintTop_toBottomOf="@id/set_new_password_edit_text"
                tools:text="*symbols absent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_new_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/password_fragment_horizontal"
                android:layout_marginTop="@dimen/password_fragment_vertical"
                android:hint="@string/confirm_new_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_new_password_edit_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/confirm_new_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/password_fragment_horizontal"
                android:text="*password does not match"
                android:textColor="@color/warning_text_color"
                android:textSize="@dimen/warning_text_size"
                android:visibility="@{set_password_fragment.passwordMatchVisibility}"
                app:layout_constraintTop_toBottomOf="@id/confirm_new_password_edit_text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/old_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/password_fragment_horizontal"
                android:layout_marginTop="@dimen/password_fragment_vertical"
                android:hint="@string/old_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_new_password_edit_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/old_pass_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/password_fragment_horizontal"
                android:text="*Password incorrect"
                android:textColor="@color/warning_text_color"
                android:textSize="@dimen/warning_text_size"
                android:visibility="@{set_password_fragment.passwordIncorrectVisibility}"
                app:layout_constraintTop_toBottomOf="@id/old_password_edit_text" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/save_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/password_fragment_vertical"
                android:backgroundTint="@color/purple_200"
                android:src="@drawable/save_fab_icon_40"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/old_pass_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>